--- a/view/index.html
+++ b/view/index.html
@@ -88,10 +88,24 @@ class="hold-transition skin-blue fixed sidebar-mini"
                         <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                     </a>
                 </li>
+                
+                <li class="treeview">
+                    <a href="#">
+                        <i class="fa fa-user-circle" aria-hidden="true"></i>
+                        <span>Data Pegawai</span>
+                        <span class="pull-right-container">
+                            <i class="fa fa-angle-left pull-right"></i>
+                        </span>
+                    </a>
+                    <ul class="treeview-menu">
+                        <li class=""><a href="#"><i class="fa fa-circle-o"></i>Profile</a></li>
+                        <li class=""><a href="#"><i class="fa fa-circle-o"></i>Berkas Masuk</a></li>
+                    </ul>
+                </li>
 
                 <li class="treeview">
                     <a href="#">
-                        <i class="fa fa-random" aria-hidden="true"></i>
+                        <i class="fa fa-caret-square-o-right" aria-hidden="true"></i>
                         <span>Register Masuk</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
@@ -120,15 +134,15 @@ class="hold-transition skin-blue fixed sidebar-mini"
 
                 <li class="treeview">
                     <a href="#">
-                        <i class="fa fa-random" aria-hidden="true"></i>
+                        <i class="fa fa-delicious" aria-hidden="true"></i>
                         <span>Register Keluar</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
                         </span>
                     </a>
                     <ul class="treeview-menu">
-                        <li class=""><a href="/register/compose"><i class="fa fa-circle-o"></i>Compose</a></li>
-                        <li class=""><a href="/register/compose/list"><i class="fa fa-circle-o"></i>Berkas Masuk</a></li>
+                        <li class=""><a href="#"><i class="fa fa-circle-o"></i>Finnish</a></li>
+                        <li class=""><a href="#"><i class="fa fa-circle-o"></i>Daftar Berkas</a></li>
                     </ul>
                 </li>
 
