--- a/view/index.html
+++ b/view/index.html
@@ -103,6 +103,7 @@ class="hold-transition skin-blue fixed sidebar-mini"
                     </ul>
                 </li>
 
+                <!-- ./Compose -->
                 <li class="treeview">
                     <a href="#">
                         <i class="fa fa-caret-square-o-right" aria-hidden="true"></i>
@@ -113,7 +114,7 @@ class="hold-transition skin-blue fixed sidebar-mini"
                     </a>
                     <ul class="treeview-menu">
                         <li class=""><a href="/register/compose"><i class="fa fa-circle-o"></i>Compose</a></li>
-                        <li class=""><a href="/register/compose/list"><i class="fa fa-circle-o"></i>Berkas Masuk</a></li>
+                        <li class=""><a href="/register/compose/list"><i class="fa fa-circle-o"></i>Table Compose</a></li>
                     </ul>
                 </li>
 
