--- a/view/node/detailcompose.html
+++ b/view/node/detailcompose.html
@@ -1,7 +1,9 @@
 <section class="box box-solid">
-    <div class="box-header with-border">
+    <div class="box-header with-border text-center">
         <h3 class="box-title">
-            <button type="button" id="btnNewRegister" name="btnNewRegister" class="btn btn-primary btn-md btn-flat"  data-toggle="modal" data-target="#modal-messange"><i class="fa fa-floppy-o" aria-hidden="true"></i> New Register</button>
+            <button class="btn btn-app bg-green" id="btnNewRegister" name="btnNewRegister" data-toggle="modal" data-target="#modal-messange">
+                <i class="fa fa-paper-plane" aria-hidden="true"></i> New Register
+            </button>
         </h3>
     </div>
     <div class="box-body">
@@ -106,35 +108,30 @@
                                     <td class="text-center">SURAT TUGAS PENGUKURAN</td>
                                     <td class="text-center">{{ p['nomor'] }}</td>
                                     <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
                                     {% elif p['type'] == 'PERSIL' %}
                                     <td style="display:none">{{ p['documentid'] }}</td>
                                     <td style="display:none">{{ p['type'] }}</td>
                                     <td class="text-center">NIB</td>
                                     <td class="text-center">{{ p['nomor'] }}</td>
                                     <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
                                     {% elif p['type'] == 'GU' %}
                                     <td style="display:none">{{ p['documentid'] }}</td>
                                     <td style="display:none">{{ p['type'] }}</td>
                                     <td class="text-center">GAMBAR UKUR</td>
                                     <td class="text-center">{{ p['nomor'] }}</td>
                                     <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
                                     {% elif p['type'] == 'SU' %}
                                     <td style="display:none">{{ p['documentid'] }}</td>
                                     <td style="display:none">{{ p['type'] }}</td>
                                     <td class="text-center">SURAT UKUR</td>
                                     <td class="text-center">{{ p['nomor'] }}</td>
                                     <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
                                     {% elif p['type'] == 'HAK' %}
                                     <td style="display:none">{{ p['documentid'] }}</td>
                                     <td style="display:none">{{ p['type'] }}</td>
                                     <td class="text-center">BUKU TANAH</td>
                                     <td class="text-center">{{ p['nomor'] }}</td>
                                     <td class="text-center">{{ p['wilayah'] }}</td>
-                                    </td>
                                     {% end %}
                                 </tr>
                                 {% end %}
@@ -152,8 +149,7 @@
         <div class="modal-content">
             <div class="modal-header" style="text-align:left;">
                 <div class="box-tools pull-right">
-                    <button type="button" class="btn close" data-dismiss="modal" aria-label="Close"><i class="fa fa-times"></i>
-                    </button>
+                    <button type="button" class="btn close" data-dismiss="modal" aria-label="Close"><i class="fa fa-times"></i></button>
                 </div>
                 <h4 class="modal-title"><i class="fa fa-envelope-o" aria-hidden="true"></i> New Register</h4>
             </div>
@@ -161,7 +157,7 @@
                 <form class="form-horizontal" id="formSendMessange" method="PUT">
                     <input type="hidden" name="berkasid" value="{{ info['_id'] }}">
                     <div class="form-group">
-                        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="region">Region:</label>
+                        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="region">Region Berkas:</label>
                         <div class="col-md-9 col-sm-9 col-xs-12">
                             <select id="region" name="region" class="select2 form-control" style="width: 100%;">
                                 <option value=""></option>
@@ -172,7 +168,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="petugas">Petugas:</label>
+                        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="petugas">Petugas Selanjutnya:</label>
                         <div class="col-md-9 col-sm-9 col-xs-12">
                             <select id="petugas" name="petugas" class="select2 form-control" style="width: 100%;">
                                 <option value=""></option>
@@ -183,13 +179,25 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="phone">Phone:</label>
+                        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="petugas">Tanggal Register:</label>
+                        <div class="col-md-9 col-sm-9 col-xs-12">
+                            <div class="input-group date">
+                                <div class="input-group-addon">
+                                    <i class="fa fa-calendar"></i>
+                                </div>
+                                <input type="text" class="form-control pull-right" id="tglregister" name="tglregister">
+                            </div>
+                            <!-- /.input group -->
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="phone">Phone Pemohon:</label>
                         <div class="col-md-9 col-sm-9 col-xs-12">
                             <input type="text" class="form-control" name="phone" id="phone">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="email">Email:</label>
+                        <label class="control-label col-md-2 col-sm-2 col-xs-12" for="email">Email Pemohon:</label>
                         <div class="col-md-9 col-sm-9 col-xs-12">
                             <input type="text" class="form-control" name="email" id="email">
                         </div>
@@ -203,6 +211,7 @@
                     <div class="form-group">
                         <div class="col-md-8 col-sm-8 col-xs-12 col-md-offset-3">
                             <div class="pull-right">
+                                <button type="button" class="btn btn-default btn-flat" data-dismiss="modal"><i class="fa fa-close"></i> Close</button>
                                 <button type="submit" id="btnSimpan" name="btnSimpan" class="btn btn-success btn-flat"><i class="fa fa-paper-plane" aria-hidden="true"></i> Kirim</button>
                             </div>
                         </div>
@@ -233,12 +242,25 @@
         allowClear: true
     });
 
+    $('#tglregister').on('change', function () {
+        $(this).valid();
+    });
+
+    $('#tglregister').datepicker({
+        autoclose: true,
+        todayBtn:  "linked",
+        format: 'dd/mm/yyyy',
+    })
+
     $('#formSendMessange').validate({
         rules: {
             region: {
                 required: true,
             },
             petugas: {
+                required: true,
+            },
+            tglregister:{
                 required: true,
             }
         },
@@ -248,6 +270,9 @@
             },
             petugas: {
                 required: 'Petugas wajib diisi.',
+            },
+            tglregister:{
+                required: 'Tanggal register wajib diisi',
             }
         },
         errorElement: "small",
@@ -284,6 +309,7 @@
                     berkasid: $('input:hidden[name=berkasid]').val(),
                     desaid: $('#region').val(),
                     petugasid: $('#petugas').val(),
+                    tglregister: $('#tglregister').val(),
                     pesan: $('#pesan').val(),
                     phone: $('#phone').val(),
                     email: $('#email').val(),
