--- a/view/page/register/compose.html
+++ b/view/page/register/compose.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="{{ static_url('vendor/select2/dist/css/select2-bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/waitme/waitMe.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/animate-css/animate.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/bootstrap-datepicker/dist/css/bootstrap-datepicker.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/init.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/skin-blue.css') }}">
 {% end %}
@@ -24,7 +25,7 @@
 <script src="{{ static_url('vendor/jquery-validation/dist/jquery.validate.js') }}"></script>
 <script src="{{ static_url('vendor/select2/dist/js/select2.full.js') }}"></script>
 <script src="{{ static_url('vendor/waitme/waitMe.js') }} }}"></script>
-<script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
+<script src="{{ static_url('vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.js') }}"></script>
 <script src="{{ static_url('vendor/bootbox/bootbox.js') }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
 <script src="{{ static_url('js/page/register/compose.js') }}"></script>
