--- a/view/page/register/compose_list.html
+++ b/view/page/register/compose_list.html
@@ -39,7 +39,7 @@
 <script src="{{ static_url('vendor/Buttons-1.5.4/js/dataTables.buttons.js') }} }}"></script>
 <script src="{{ static_url('vendor/Buttons-1.5.4/js/buttons.bootstrap.js') }} }}"></script>
 <script src="{{ static_url('vendor/Buttons-1.5.4/js/buttons.html5.js') }} }}"></script>
-<script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
+<script src="{{ static_url('vendor/bootbox/bootbox.js') }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
 <script src="{{ static_url('js/page/register/compose_list.js') }}"></script>
 <style>
