--- a/view/page/register/compose.html
+++ b/view/page/register/compose.html
@@ -97,7 +97,7 @@
         <small>{{ page['description'] }}</small>
     </h1>
     <ol class="breadcrumb">
-        <li><i class="fa fa-server"></i> Register Masuk</li>
+        <li><i class="fa fa-file-o" aria-hidden="true"></i> Register Masuk</li>
         <li class="active"> {{ page['title'] }}</li>
     </ol>
 </section>
