--- a/view/index.html
+++ b/view/index.html
@@ -106,7 +106,7 @@ class="hold-transition skin-blue fixed sidebar-mini"
                 <!-- ./Compose -->
                 <li class="treeview">
                     <a href="#">
-                        <i class="fa fa-caret-square-o-right" aria-hidden="true"></i>
+                        <i class="fa fa-file-o" aria-hidden="true"></i>
                         <span>Register Masuk</span>
                         <span class="pull-right-container">
                             <i class="fa fa-angle-left pull-right"></i>
