--- a/view/node/detilberkasmasuk.html
+++ b/view/node/detilberkasmasuk.html
@@ -1,9 +1,11 @@
 <section class="box box-solid">
     <div class="box-header with-border text-center">
         <h3 class="box-title">
+            {% if register['status'] == 'PROSES' %}
             <a class="btn btn-app bg-green" id="btnUpdate" name="btnUpdate">
                 <i class="fa fa-refresh" aria-hidden="true"></i> Update
             </a>
+            {% end %}
             <a class="btn btn-app bg-green" id="btnKembali" name="btnKembali">
                 <i class="fa fa-undo" aria-hidden="true"></i> Kembali
             </a>
@@ -128,6 +130,31 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-sm-12">
+                <h5> <strong>RIWAYAT:</strong> </h5>
+            </div>
+            <div class="col-sm-12">
+                <div class="table-responsive">
+                    <table class="table table-bordered">
+                        <tbody>
+                            <tr>
+                                <th class="text-center">Pengirim</th>
+                                <th class="text-center"><i class="fa fa-exchange" aria-hidden="true"></i></th>
+                                <th class="text-center">Penerima</th>
+                            </tr>
+                            {% for r in riwayat %}
+                            <tr>
+                                <td class="text-center">{{ r['sendername'].upper() }} <br> {% if r['senderdate'] != None %}{{r['senderdate'].strftime('%d/%m/%Y, %H:%M:%S') }} {% end %} </td>
+                                <td class="text-center">{{ r['messange'] }}</td>
+                                <td class="text-center">{{ r['recievename'].upper() }} <br> {% if r['recievedate'] != None %} {{r['recievedate'].strftime('%d/%m/%Y, %H:%M:%S') }} {% end %} </td>
+                            </tr>
+                            {% end %}
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 
@@ -165,5 +192,4 @@
             })
         })
     });
-
 </script>
