--- a/view/page/register/compose_list.html
+++ b/view/page/register/compose_list.html
@@ -5,8 +5,6 @@
 <link rel="stylesheet" href="{{ static_url('vendor/bootstrap/dist/css/bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/font-awesome/css/font-awesome.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/waitme/waitMe.css') }}">
-<link rel="stylesheet" href="{{ static_url('vendor/select2/dist/css/select2.css') }}">
-<link rel="stylesheet" href="{{ static_url('vendor/select2/dist/css/select2-bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/datatables.net-bs/css/dataTables.bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/Responsive-2.2.2/css/responsive.dataTables.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/Responsive-2.2.2/css/responsive.bootstrap.css') }}">
@@ -29,7 +27,6 @@
 <script src="{{ static_url('vendor/jQuery.print/jQuery.print.js')  }}"></script>
 <script src="{{ static_url('vendor/jquery-validation/dist/jquery.validate.js') }}"></script>
 <script src="{{ static_url('vendor/waitme/waitMe.js') }} }}"></script>
-<script src="{{  static_url('vendor/select2/dist/js/select2.full.js') }}"></script>
 <script src="{{ static_url('vendor/datatables.net/js/jquery.dataTables.js') }}"></script>
 <script src="{{ static_url('vendor/datatables.net-bs/js/dataTables.bootstrap.js') }}"></script>
 <script src="{{ static_url('vendor/Responsive-2.2.2/js/dataTables.responsive.js') }} }}"></script>
@@ -119,7 +116,7 @@
         <small>{{ page['description'] }}</small>
     </h1>
     <ol class="breadcrumb">
-        <li><i class="fa fa-server"></i> Register Masuk</li>
+        <li><i class="fa fa-file-o" aria-hidden="true"></i> Register Masuk</li>
         <li class="active"> {{ page['title'] }}</li>
     </ol>
 </section>
