--- a/view/page/register/compose.html
+++ b/view/page/register/compose.html
@@ -26,6 +26,7 @@
 <script src="{{ static_url('vendor/select2/dist/js/select2.full.js') }}"></script>
 <script src="{{ static_url('vendor/waitme/waitMe.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.js') }}"></script>
+<script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootbox/bootbox.js') }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
 <script src="{{ static_url('js/page/register/compose.js') }}"></script>
