--- a/view/page/register/inbox.html
+++ b/view/page/register/inbox.html
@@ -11,6 +11,8 @@
 <link rel="stylesheet" href="{{ static_url('vendor/Responsive-2.2.2/css/responsive.dataTables.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/Responsive-2.2.2/css/responsive.bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/FixedHeader-3.1.7/css/fixedHeader.bootstrap.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/Buttons-1.5.4/css/buttons.dataTables.css') }}">
+<link rel="stylesheet" href="{{ static_url('vendor/Buttons-1.5.4/css/buttons.bootstrap.css') }}">
 <link rel="stylesheet" href="{{ static_url('vendor/animate-css/animate.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/init.css') }}">
 <link rel="stylesheet" href="{{ static_url('css/skin-blue.css') }}">
@@ -35,6 +37,9 @@
 <script src="{{ static_url('vendor/Responsive-2.2.2/js/responsive.bootstrap.js') }} }}"></script>
 <script src="{{ static_url('vendor/FixedHeader-3.1.7/js/dataTables.fixedHeader.js') }} }}"></script>
 <script src="{{ static_url('vendor/FixedHeader-3.1.7/js/fixedHeader.bootstrap.js') }} }}"></script>
+<script src="{{ static_url('vendor/Buttons-1.5.4/js/dataTables.buttons.js') }} }}"></script>
+<script src="{{ static_url('vendor/Buttons-1.5.4/js/buttons.bootstrap.js') }} }}"></script>
+<script src="{{ static_url('vendor/Buttons-1.5.4/js/buttons.html5.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootstrap-notify-master/bootstrap-notify.js') }} }}"></script>
 <script src="{{ static_url('vendor/bootbox/bootbox.js') }}"></script>
 <script src="{{ static_url('js/init.js') }}"></script>
@@ -146,7 +151,6 @@
     
                 <div class="box box-solid">
                     <div class="box-body">
-                        <button id="btnResetFilter" type="button" class="btn btn-warning btn-flat"> Reset</button>
                         <!-- Table Register Berkas -->
                         <table id="tableBerkas" class="table table-striped table-bordered" style="width:100%">
                             <thead>
