--- a/view/page/register/sent.html
+++ b/view/page/register/sent.html
@@ -172,6 +172,9 @@
                                     <th>Tanggal Kirim</th>
                                     <th>Penerima</th>
                                     <th>Tanggal Terima</th>
+                                    <th>Kegiatan</th>
+                                    <th>Prosedur</th>
+                                    <th></th>
                                 </tr>
                             </thead>
                             <tbody style="cursor: pointer;">
@@ -183,12 +186,14 @@
             </div>
             <!-- /.tab-pane -->
             <div class="tab-pane" id="tabDetail">
-                <div class="error-content">
-                    <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
-
-                    <p class="text-center">
-                        We could not find the page you were looking for.
-                    </p>
+                <div id="berkasView">
+                    <div class="error-content">
+                        <h3 class="text-center"><i class="fa fa-warning text-yellow"></i> Oops! Page not found.</h3>
+            
+                        <p class="text-center">
+                            We could not find the page you were looking for.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
